<resources>
    <!--    <string name="app_name">汽配钉钉</string>-->
    <string name="home_page">首页</string>
    <string name="message">消息</string>
    <string name="work">工作</string>
    <string name="deal">交易</string>
    <string name="mine">我的</string>
    <string name="test_long">ABCDEFGabcdefg123456赵钱孙李+-*/=?!`@#</string>
    <string name="test_phone">1333333333</string>
    <string name="dkhjl">大客户经理</string>
    <string name="hair_name_card">发名片</string>
    <string name="business_friend">商友</string>
    <string name="visitors">访客</string>
    <string name="lou_voucher_iou_etc">白条、代金券、车同轨白条等</string>
    <string name="focus_on_costomer_or_peer_information">关注的客户或同行信息</string>
    <string name="rewards_for_inviting_new_users">邀请新用户有奖励</string>
    <string name="message_address_permission_setting">消息提醒、收货地址、权限管理等设置</string>
    <string name="frame_number_factory_data">车架号、原厂数据等</string>
    <string name="mybusiness">我的企业</string>
    <string name="myteam">我的团队</string>
    <string name="mycustomer">客户管理</string>
    <string name="business">商机</string>
    <string name="jr">车同轨金融</string>
    <string name="queryrecord">查询记录</string>
    <string name="attentionnotes">关注记录</string>
    <string name="invitation">邀请</string>
    <string name="setting">设置</string>
    <string name="icon_start">*</string>
    <string name="join">加入</string>
    <string name="account_register">账号注册</string>
    <string name="please_input_account_phone">请输入账号/手机</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_auth_code">请输入短信验证码</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="auth_code_login">验证码登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_">登\t\t\t\t录</string>
    <string name="read_and_agree">已阅读并同意</string>
    <string name="user_deal">《用户协议》</string>
    <string name="confrim">确定</string>
    <string name="save">保存</string>

    <string name="CheckWordAndNum">qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890._-</string>
    <string name="CheckIdCardNum">1234567890Xx-</string>
    <string name="CheckEmail">qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890.@</string>

    <string name="all">全部</string>
    <string name="submit">提交</string>
    <string name="more">更多</string>
    <string name="oil_and_chemicals">油品及化学品</string>
    <string name="hot_recommend">热销推荐</string>
    <string name="tire">轮胎</string>
    <string name="brake_pad">制动系统</string>
    <string name="sparking_plug">点火系统</string>
    <string name="accumulator">电瓶</string>
    <string name="quick_wear_part">易损件</string>
    <string name="notify">通知</string>
    <string name="_17_vin">输入17位车架号进行VIN码定型</string>
    <string name="add_part">添加配件</string>
    <string name="register">注册</string>
    <string name="swicthover">切换</string>
    <string name="my_alliance">我的联盟</string>
    <string name="coupon">优惠券</string>
    <string name="goods">商品</string>
    <string name="detail">详情</string>
    <string name="buy_now">立即购买</string>
    <string name="add_trolley">加入购物车</string>
    <string name="trolley">购物车</string>
    <string name="shop">店铺</string>
    <string name="goods_detail">商品详情</string>
    <string name="filter">过滤系统</string>
    <string name="account_password">账号密码登录</string>
    <string name="password_login">密码登录</string>
    <string name="phone_number">手机号</string>
</resources>