<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.login.ForgetPasswordActivity">

    <ImageView
        android:id="@+id/mBackIV"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:paddingTop="40dp"
        android:src="@drawable/icon_back_black" />

    <TextView
        android:id="@+id/mLoginTypeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="忘记密码"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <com.android.ctgapp.widget.EditTextWithDeleteBtn
        android:id="@+id/mPhoneNumberET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:maxLength="11"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:hint="请输入手机号码" />

    <View
        style="@style/GrayLine"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:id="@+id/mAuthCodeLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/mAuthCodeET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@null"
            android:hint="@string/please_input_auth_code"
            android:inputType="number"
            android:maxLength="10" />

        <TextView
            android:id="@+id/mAuthCodeCountDownTV"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingStart="0dp"
            android:paddingEnd="20dp"
            android:maxLines="1"
            android:text="@string/get_auth_code"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

    <View
        style="@style/GrayLine"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:maxLength="20"
        android:id="@+id/mPasswordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:hint="请输入密码"
        android:inputType="textPassword" />

    <View
        style="@style/GrayLine"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:maxLength="20"
        android:id="@+id/mPasswordAgainET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:hint="请再次输入密码"
        android:inputType="textPassword" />

    <View
        style="@style/GrayLine"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/mConfirmBTN"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="40dp"
        android:background="@drawable/bg_btn_common_color_change"
        android:text="@string/confrim"
        android:textColor="@color/white" />

</LinearLayout>