<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/gray_page"
    android:orientation="vertical"
    tools:context=".activity.home.shop.GoodsDetailActivity">

    <RelativeLayout
        android:id="@+id/mTitleBar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/blue_common"
        android:gravity="bottom"
        android:paddingTop="40dp">

        <ImageView
            android:id="@+id/mBackIV"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@drawable/icon_back_white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/mGoodsLL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mGoodsTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goods"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <View
                    android:id="@+id/mGoodsLine"
                    android:layout_width="20dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="3dp"
                    android:background="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mGoodsDetailLL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mGoodsDetailTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail"
                    android:textColor="@color/text_white_light"
                    android:textSize="16sp" />

                <View
                    android:id="@+id/mGoodsDetailLine"
                    android:layout_width="20dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="3dp"
                    android:background="@color/white"
                    android:visibility="invisible" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/mScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.youth.banner.Banner
                android:id="@+id/mBanner"
                android:layout_width="match_parent"
                android:layout_height="180dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="¥"
                    android:textColor="@color/red_start"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/mPriceTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:textColor="@color/red_start"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/mSellCountTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_gray_light"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/mGoodsNameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingHorizontal="10dp" />

            <TextView
                android:id="@+id/mGoodsInventoryTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="10dp"
                android:textColor="@color/text_gray_light"
                android:textSize="12sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="信息"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/mGoodsInfoTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="品牌"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/mBrandNameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="分类"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/mGoodsClassTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:textSize="12sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="型号"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/mGoodsTypeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="12sp" />
            </LinearLayout>


<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="1dp"-->
<!--                android:background="@color/white"-->
<!--                android:orientation="horizontal"-->
<!--                android:padding="10dp">-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="仓库"-->
<!--                    android:textSize="12sp" />-->

<!--                <TextView-->
<!--                    android:id="@+id/mGoodsStorageTV"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="10dp"-->
<!--                    android:ellipsize="end"-->
<!--                    android:lines="1"-->
<!--                    android:textSize="12sp" />-->
<!--            </LinearLayout>-->
            <!--商品详情-->
            <LinearLayout
                android:id="@+id/mGoodsImagesLL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/mDetailLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingVertical="10dp">

                    <View
                        android:layout_width="50dp"
                        android:layout_height="0.5dp"
                        android:background="#979797" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="6dp"
                        android:text="@string/goods_detail"
                        android:textColor="#9B9B9B"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="50dp"
                        android:layout_height="0.5dp"
                        android:background="#979797" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mImageContainerLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    <!--按钮布局-->
    <LinearLayout
        android:id="@+id/mBottomMenuLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_page" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/mSelectLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="已选: "
                android:textColor="@color/black_text"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/mSelectTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/red_dark"
                android:textSize="12sp" />

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:src="@drawable/icon_arrow_right_black" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/icon_shop_transparency" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/shop"
                    android:textSize="9sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/icon_costomer_transparency" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="客服"
                    android:textSize="9sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mTrolleyLL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/icon_trolley_transparency" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/trolley"
                    android:textSize="9sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="110dp"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/mAddTrolleyBTN"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/bg_btn_yellow_left_radius"
                    android:text="@string/add_trolley"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="110dp"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/mBuyBTN"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/bg_btn_blue_radius_right"
                    android:text="@string/buy_now"
                    android:textColor="@color/white" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>